Add `service` module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Takeru Ohta <phjgt308@gmail.com>"]
 
 [dependencies]
+atomic_immut = "0.1"
 byteorder = "1"
 fibers = "0.1"
 futures = "0.1"
+slog = "2"
 trackable = "0.2"
