--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ futures = "0.1"
 rmp-serde = { version = "0.13", optional = true }
 serde = { version = "1", optional = true }
 serde_derive = { version = "1", optional = true }
+serde_json = { version = "1", optional = true }
 slog = "2"
 trackable = "0.2"
 
@@ -30,6 +31,7 @@ sloggers = "0.2"
 
 [features]
 msgpack = ["serde", "rmp-serde"]
+json = ["serde", "serde_json"]
 
 [package.metadata.docs.rs]
 all-features = true
