--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ atomic_immut = "0.1"
 bincode = { version = "1", optional = true }
 byteorder = "1"
 fibers = "0.1"
-futures = "= 0.1.18" # TODO: support 0.1.19 or later
+futures = "0.1"
 prometrics = "0.1"
 rmp-serde = { version = "0.13", optional = true }
 serde = { version = "1", optional = true }
