--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bytecodec = "0.2"
 byteorder = "1"
 factory = "0.1"
 fibers = "0.1"
+fibers_tasque = "0.1"
 futures = "0.1"
 prometrics = "0.1"
 slog = "2"
