Switch to 2018-edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 keywords = ["rpc", "fibers"]
 categories = ["network-programming", "asynchronous"]
 license = "MIT"
+edition = "2018"
 
 [badges]
 travis-ci = {repository = "sile/fibers_rpc"}
