do cargo test on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
   allow_failures:
     - rust: nightly
 
+script:
+  - cargo test --all
+
 env:
   global:
   - RUSTFLAGS="-C link-dead-code"
